# m4

./: CMakeLists.txt  README.md  config.h.in  eval.c  main.c
tests/: gnu_compat.m4  gnuargs.m4
tests/ispc/: README.md  svml.m4  util-xe.m4  util.m4
